k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nutriflow-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nutriflow
            pathType: Prefix
            backend:
              service:
                name: nutriflow-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nutriflow-frontend
                port:
                  number: 80
